--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "prebuild": "pnpm run /prebuild:.*/",
     "prebuild:shibuya-tennis": "ln -sf ../../../appsscript.json packages/shibuya-tennis/dist/appsscript.json",
     "build": "pnpm run /build:.*/",
-    "build:shibuya-tennis": "tsc -p ./packages/shibuya-tennis/tsconfig.shibuya-tennis.json",
-    "watch": "pnpm run /watch:.*/",
-    "watch:shibuya-tennis": "tsc -w  -p ../packages/shibuya-tennis/tsconfig.shibuya-tennis.json",
+    "build:shibuya-tennis": "node ./build.js  ./packages/shibuya-tennis/src/main.ts  ./packages/shibuya-tennis/dist/main.js",
     "push": "pnpm run /push:.*/",
     "push:shibuya-tennis": "clasp --project ./packages/shibuya-tennis/.clasp.json push"
   },
@@ -20,6 +18,8 @@
     "@google/clasp": "^2.4.2",
     "@tsconfig/strictest": "^2.0.5",
     "@types/google-apps-script": "^1.0.84",
+    "esbuild": "^0.24.0",
+    "esbuild-gas-plugin": "^0.8.0",
     "typescript": "^5.6.3"
   },
   "volta": {
