chore: biomeで無視するファイルを設定

--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": []
+    "ignore": ["*/node_modules/*", "*/dist/*"]
   },
   "formatter": {
     "enabled": true,
@@ -25,7 +25,13 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "double"
+      "quoteStyle": "double",
+      "semicolons": "asNeeded"
+    }
+  },
+  "json": {
+    "parser": {
+      "allowComments": true
     }
   }
 }
