--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@google/clasp": "^2.4.2",
+    "@holiday-jp/holiday_jp": "^2.4.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/google-apps-script": "^1.0.84",
     "esbuild": "^0.24.0",
