--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@holiday-jp/holiday_jp": "^2.4.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/google-apps-script": "^1.0.84",
+    "dayjs": "^1.11.13",
     "esbuild": "^0.24.0",
     "esbuild-gas-plugin": "^0.8.0",
     "typescript": "^5.6.3"
